--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@ body {
   font-family: Lato, sans-serif;
 }
 
+ul {
+  margin: 0;
+  padding: 0px;
+}
+
+li,
+h3 {
+  list-style: none;
+}
+
+input,
+button {
+  outline: none;
+}
+
 .header {
   width: 500px;
   margin: 0 auto;
@@ -12,7 +27,7 @@ body {
   text-align: right;
 }
 
-.header img {
+.header-img {
   width: 100%;
 }
 
@@ -40,21 +55,6 @@ body {
 
 .task-row-wrapper {
   display: flex;
-}
-
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
 }
 
 button {
@@ -147,17 +147,17 @@ li > input[type="text"] {
   width: 226px;
 }
 
-li > button.task-delete:hover {
+li > button.delete:hover {
   color: #cf2323;
 }
 
-button.task-delete img {
+button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.task-delete img:hover {
+button.delete img:hover {
   transform: rotateZ(0);
 }
 
