refactor: change class names BEM advance according to rule 2.1 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@ button {
   text-align: right;
 }
 
-.header-img {
+.header__img {
   width: 100%;
 }
 
-.header .header-link {
+.header .header__link {
   font-family: fantasy, cursive;
 }
 
